--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-router-dom": "^6.17.0",
     "react-scroll": "^1.8.8",
     "tw-elements": "^1.0.0-alpha12"
   },
