--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.17.0",
     "react-scroll": "^1.8.8",
     "react-spring": "^9.7.3",
     "tw-elements": "^1.0.0-alpha12"
